[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "jupyterlab-nbconvert-nocode"
authors = [{name = "the jupyterlab-nbconvert-nocode authors", email = "t.paine154@gmail.com"}]
description = "A simple helper library with 2 NBConvert exporters for PDF/HTML export with no code cells"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.4.1"
requires-python = ">=3.10"
keywords = [
    "Jupyter",
    "JupyterLab",
    "Notebook",
    "Notebooks",
    "Report",
    "Reports",
    "Reporting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
  "jupyterlab>=3.5",
  "nbconvert>=6.0.0",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatchling",
    "mdformat>=0.7.22,<1.1",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff>=0.9,<0.15",
    "twine",
    "uv",
    "wheel",
]

[project.entry-points."nbconvert.exporters"]
pdf_nocode = "jupyterlab_nbconvert_nocode.nbconvert_functions.hideinput.exporters:PDFHideCodeExporter"
html_nocode = "jupyterlab_nbconvert_nocode.nbconvert_functions.hideinput.exporters:HTMLHideCodeExporter"

[project.scripts]

[project.urls]
Repository = "https://github.com/timkpaine/jupyterlab-nbconvert-nocode"
Homepage = "https://github.com/timkpaine/jupyterlab-nbconvert-nocode"

[tool.bumpversion]
current_version = "0.4.1"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "jupyterlab_nbconvert_nocode/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Makefile",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "jupyterlab_nbconvert_nocode/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["jupyterlab_nbconvert_nocode"]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_nbconvert_nocode"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_nbconvert_nocode/templates" = "share/jupyter/nbconvert/templates"

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "jupyterlab_nbconvert_nocode/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyterlab_nbconvert_nocode"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]